Replaced Utility menu with a improved event based menu

--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -67,7 +67,7 @@ override_close_change_border_policy_desc;We decided that our country is good as 
 override_close_change_border_policy_title;Hide the Border Policy Options;;;;;;;;;;;;;x
 override_disable_override_desc;This hides the overide decisions from view to reduce clutter.;;;;;;;;;;;;;x
 override_disable_override_title;Hide 'Override' Decisions;;;;;;;;;;;;;x
-override_enable_override_desc;This decision shows a number of player only decisions which allow you to force through certain law and RGO changes, as well as using province immigrators.;;;;;;;;;;;;;x
+override_enable_override_desc;This decision shows a menu with number of player only decisions which allow you to force through certain law and RGO changes, as well as using province immigrators.;;;;;;;;;;;;;x
 override_enable_override_title;Show 'Override' Decisions;;;;;;;;;;;;;x
 override_infamy_for_growth_modifier_removal_desc;Cancel the current ongoing growth campaign.;;;;;;;;;;;;;x
 override_infamy_for_growth_modifier_removal_title;Stop the Ongoing Population Campaign;;;;;;;;;;;;;x
@@ -105,7 +105,7 @@ setup_renounce_host_desc;You are currently the Host. If you renounce this role a
 setup_renounce_host_title;Renounce the role of Host;;;;;;;;;;;;;x
 utility_disable_utility_desc;This will hide the utility decisions.;;;;;;;;;;;;;x
 utility_disable_utility_title;Hide 'Utility' Decisions;;;;;;;;;;;;;x
-utility_enable_utility_desc; The decision shows a mix of tools and decisions to facilitate small changes and fixes during gameplay.;;;;;;;;;;;;;x
+utility_enable_utility_desc; The decision shows a menu with a plethora of tools to facilitate small changes and fixes during gameplay.;;;;;;;;;;;;;x
 utility_enable_utility_title;Show 'Utility' Decisions;;;;;;;;;;;;;x
 utility_popreduction_decisions_disable_desc;The 'Global Pop Reduction' decisions will disappear from this game session and won’t reappear again. You won’t be able to use these decisions again for this game.;;;;;;;;;;;;;x
 utility_popreduction_decisions_disable_title;Disable 'Global Pop Reduction' decisions;;;;;;;;;;;;;x
