--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -54,3 +54,35 @@ EVTOPTC75;Make Austria Certain to join Crimean War(Default: §RDisabled§!);;;;;;;
 EVTOPTD75;Lucky Nations (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTBACK;Back to the Start.;;;;;;;;;;;;;x
 EVTNEXT;Next.;;;;;;;;;;;;;x
+EVTCLOSE;Close.;;;;;;;;;;;;;x
+EVTSTART;Back to the Start.;;;;;;;;;;;;;x
+EVTNAME78;Utility Options, 1/4;;;;;;;;;;;;;x
+EVTDESC78;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n§BMP Access:§! Give players access to grants and other MP functionalities.\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
+EVTOPTA78;Open National Campaigns menu (New decisions will appear in a day);;;;;;;;;;;;;x
+EVTOPTB78;Give access to MP functionality to players (New decisions will appear in a day);;;;;;;;;;;;;x
+EVTOPTC78;Open Vassal Release menu;;;;;;;;;;;;;x
+EVTOPTD78;Open Core Return menu;;;;;;;;;;;;;x
+EVTNAME79;Utility Options, 2/4;;;;;;;;;;;;;x
+EVTDESC79;§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n§BRequest a General§!: This will give a single free average general.\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
+EVTOPTA79;Reduce Global Population by 10%;;;;;;;;;;;;;x
+EVTOPTB79;Vassal Tax Payment;;;;;;;;;;;;;x
+EVTOPTC79;Request a General;;;;;;;;;;;;;x
+EVTOPTD79;See Tech School Change options (New decisions will appear in a day);;;;;;;;;;;;;x
+EVTNAME80;Border Control options;;;;;;;;;;;;;x
+EVTDESC80;Pick whatever policy you want, but be aware: You will only be able to do that again after the §RLaw Changed by Force§! modifier goes away.;;;;;;;;;;;;;x
+EVTOPTA80;Open the borders.;;;;;;;;;;;;;x
+EVTOPTB80;Controlled immigration.;;;;;;;;;;;;;x
+EVTOPTC80;Close the borders!;;;;;;;;;;;;;x
+EVTOPTD80;Back to the options;;;;;;;;;;;;;
+EVTOPTE80;Close;;;;;;;;;;;;;xx
+EVTNAME84;Utility Options, 3/3;;;;;;;;;;;;;x
+EVTDESC84;§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
+EVTOPTA84;Border Control options;;;;;;;;;;;;;x
+EVTOPTB84;RGO Change Menu (Mining);;;;;;;;;;;;;x
+EVTOPTC84;RGO Change Menu (Farming);;;;;;;;;;;;;x
+EVTNAME79X; ;;;;;;;;;;;;;x
+EVTDESC79X; ;;;;;;;;;;;;;x
+EVTOPTA79X; ;;;;;;;;;;;;;x
+EVTOPTB79X; ;;;;;;;;;;;;;x
+EVTOPTC79X; ;;;;;;;;;;;;;x
+EVTOPTD79X; ;;;;;;;;;;;;;x
