--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -64,3 +64,7 @@ currently_enabled;This is currently §GEnabled§!. Click to §RDisable§! it.;;;;;;;
 currently_disabled;This is currently §RDisabled§!. Click to §GEnable§! it.;;;;;;;;;;;;x
 permanent_option;§!This is permanent, you §RWON'T§! be able to change this optionb again in this save.;;;;;;;;;;;;x
 permanent_option_taken;§! You can't change this option anymore.;;;;;;;;;;;;x
+permanent_action;Beware! This is §RPERMANENT§!!;;;;;;;;;;;;x
+not_mp;§!\nThis is §RNOT§! a multiplayer game, there's nobody to give you grants!;;;;;;;;;;;;x
+cant_do_while_at_war_or_no_vassals;You can't do this while at §Rwar§! or if you §Rhave no vassals§!.;;;;;;;;;;;;x
+cant_do_that_yet;You §RCAN NOT§! do again that yet!;;;;;;;;;;;;x
