--- a/TGC/localisation/00_goods.csv
+++ b/TGC/localisation/00_goods.csv
@@ -22,7 +22,7 @@ fruit;Produce;;;;;;;;;;;;;x
 fuel;Petroleum Fuel;;;;;;;;;;;;;x
 furniture;Furniture;;;;;;;;;;;;;x
 glass;Glassware;;;;;;;;;;;;;x
-grain;Food Crops;;;;;;;;;;;;;x
+grain;Grain;;;;;;;;;;;;;x
 industrial_goods;Industrial Goods;;;;;;;;;;;;;x
 iron;Metals;;;;;;;;;;;;;x
 liquor;Beverages;;;;;;;;;;;;;x
