Gran Colombia bug fix and optimization

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -1517,7 +1517,7 @@ golden_law_title;The Golden Law;;;;;;;;;;;;;x
 government_of_india_act_desc;The recent rebellion in India has exposed structural weaknesses and inefficiencies in Company rule, for the good of the Indians and Empire we must liquidate the East India Company and bring their holdings under Crown rule. \n\n We hold ourselves bound to the natives of our Indian territories by the same obligation of duty which bind us to all our other subjects.;;;;;;;;;;;;;x
 government_of_india_act_title;The Government of India Act ($YEAR$);;;;;;;;;;;;;x
 gran_colombia_by_sword_desc;If Gran Colombia is to exist once again, we must lay claim to all its territory—and reunite it by sword, if need be!;;;;;;;;;;;;;x
-gran_colombia_by_sword_title;Claim Gran Colombia;;;;;;;;;;;;;x
+gran_colombia_by_sword_title;Claim Gran Colombia, by force!;;;;;;;;;;;;;x
 greater_afghanistan_desc;We are a power to be reckoned with. It is time that we claimed the lands that are part of our heritage!;;;;;;;;;;;;;x
 greater_afghanistan_title;Claim Greater Afghanistan;;;;;;;;;;;;;x
 greater_andinia_desc;The borders of the Jewish State must stretch from coast to coast, all of Patagonia shall be ours!;;;;;;;;;;;;;x
