New improved override campaign menus

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -57,13 +57,13 @@ EVTNEXT;Next.;;;;;;;;;;;;;x
 EVTCLOSE;Close.;;;;;;;;;;;;;x
 EVTSTART;Back to the Start.;;;;;;;;;;;;;x
 EVTNAME78;Utility Options, 1/4;;;;;;;;;;;;;x
-EVTDESC78;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n§BMP Access:§! Give players access to grants and other MP functionalities.\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
-EVTOPTA78;Open National Campaigns menu (New decisions will appear in a day);;;;;;;;;;;;;x
+EVTDESC78;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BMP Access:§! Give players access to grants and other MP functionalities.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
+EVTOPTA78;Open National Campaigns menu;;;;;;;;;;;;;x
 EVTOPTB78;Give access to MP functionality to players (New decisions will appear in a day);;;;;;;;;;;;;x
 EVTOPTC78;Open Vassal Release menu;;;;;;;;;;;;;x
 EVTOPTD78;Open Core Return menu;;;;;;;;;;;;;x
 EVTNAME79;Utility Options, 2/4;;;;;;;;;;;;;x
-EVTDESC79;§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n§BRequest a General§!: This will give a single free average general.\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
+EVTDESC79;\n§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n\n§BRequest a General§!: This will give a single free average general. You can have only one cheat general at a time.\n\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
 EVTOPTA79;Reduce Global Population by 10%;;;;;;;;;;;;;x
 EVTOPTB79;Vassal Tax Payment;;;;;;;;;;;;;x
 EVTOPTC79;Request a General;;;;;;;;;;;;;x
@@ -76,10 +76,22 @@ EVTOPTC80;Close the borders!;;;;;;;;;;;;;x
 EVTOPTD80;Back to the options;;;;;;;;;;;;;
 EVTOPTE80;Close;;;;;;;;;;;;;xx
 EVTNAME84;Utility Options, 3/3;;;;;;;;;;;;;x
-EVTDESC84;§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
+EVTDESC84;\n§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
 EVTOPTA84;Border Control options;;;;;;;;;;;;;x
 EVTOPTB84;RGO Change Menu (Mining);;;;;;;;;;;;;x
 EVTOPTC84;RGO Change Menu (Farming);;;;;;;;;;;;;x
+EVTNAME85;National Campaign Menu, 1/3;;;;;;;;;;;;;x
+EVTDESC85;§BBirth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BDiplomatic Campaign§!: Initiate a series of Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BAcademic Campaign§!: By making a series of concessions to Universities and other institutions, private or public, we will able to increase our Research Point production.;;;;;;;;;;;;;x
+EVTOPTA85;Remove all currently active National Campaigns;;;;;;;;;;;;;x
+EVTOPTB85;Birth Rate Campaign;;;;;;;;;;;;;x
+EVTOPTC85;Diplomatic Campaign;;;;;;;;;;;;;x
+EVTOPTD85;Academic Campaign;;;;;;;;;;;;;x
+EVTNAME86;National Campaign Menu, 2/3;;;;;;;;;;;;;x
+EVTDESC86;§BColonial Settling Campaign§!: Incentivize our citizens to move and settle in our colonies, increasing colonial immigration.\n\n§BAnti Emigration Campaign§!: By using the power of patriotism and propaganda, we will convince our citizens to stay, instead of simply using the other Utility Decision to close the borders.\n\n§BTourism and Settlement Campaign§!: We can start an International Campaign promoting our country, and by giving incentives to new settlers, we can heavily increase the numbers of Immigrations into our country.\n\n§BDirection Immigration Menu§!: Open The Direction Immigration submod menu. This will only work if said submod is activated.;;;;;;;;;;;;;x
+EVTOPTA86;Colonial Settling Campaign;;;;;;;;;;;;;x
+EVTOPTB86;Anti Emigration Campaign;;;;;;;;;;;;;x
+EVTOPTC86;Tourism and Settlement Campaign;;;;;;;;;;;;;x
+EVTOPTD86;Open Direction Immigration Menu;;;;;;;;;;;;;x
 EVTNAME79X; ;;;;;;;;;;;;;x
 EVTDESC79X; ;;;;;;;;;;;;;x
 EVTOPTA79X; ;;;;;;;;;;;;;x
