--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1621,3 +1621,5 @@ wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;;
 wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;;
 wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
 wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
+tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
+tourism_campaign_desc;;;;;;;;;;;;;;;
