MP menu reworked

--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -133,8 +133,8 @@ utility_will_not_give_desc;This will prevent us from getting events when other p
 utility_will_not_give_title;Disable Giving Grants;;;;;;;;;;;;;x
 utility_will_not_receive_desc;This will mean we no longer will receive grants from other players.;;;;;;;;;;;;;x
 utility_will_not_receive_title;No More Grants!;;;;;;;;;;;;;x
-utility_will_receive_desc;This will request a grant from other players. Please note they must have chosen the decision to enable giving grants for the request to go through. It can be reversed at any time.;;;;;;;;;;;;;x
-utility_will_receive_title;Request A Grant;;;;;;;;;;;;;x
+utility_will_receive_title;Grant Menu;;;;;;;;;;;;;x
+utility_will_receive_desc;Opens the Grant System Menu to ask other players for Money.;;;;;;;;;;;;;x
 override_research_campaign_title;Start a Research Campaign;;;;;;;;;;;;;x
 override_research_campaign_desc;We can redirect some of our annual budget to help along our scientists research for our country.;;;;;;;;;;;;;x
 override_research_campaign_remove_title;Stop the Research campaign;;;;;;;;;;;;;x
