--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -56,13 +56,13 @@ EVTBACK;Back to the Start.;;;;;;;;;;;;;x
 EVTNEXT;Next.;;;;;;;;;;;;;x
 EVTCLOSE;Close.;;;;;;;;;;;;;x
 EVTSTART;Back to the Start.;;;;;;;;;;;;;x
-EVTNAME78;Utility Options, 1/4;;;;;;;;;;;;;x
+EVTNAME78;Utility Options, 1/3;;;;;;;;;;;;;x
 EVTDESC78;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BMP Access:§! Give players access to grants and other MP functionalities.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
 EVTOPTA78;Open National Campaigns menu;;;;;;;;;;;;;x
 EVTOPTB78;Give access to MP functionality to players (New decisions will appear in a day);;;;;;;;;;;;;x
 EVTOPTC78;Open Vassal Release menu;;;;;;;;;;;;;x
 EVTOPTD78;Open Core Return menu;;;;;;;;;;;;;x
-EVTNAME79;Utility Options, 2/4;;;;;;;;;;;;;x
+EVTNAME79;Utility Options, 2/3;;;;;;;;;;;;;x
 EVTDESC79;\n§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n\n§BRequest a General§!: This will give a single free average general. You can have only one cheat general at a time.\n\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
 EVTOPTA79;Reduce Global Population by 10%;;;;;;;;;;;;;x
 EVTOPTB79;Vassal Tax Payment;;;;;;;;;;;;;x
@@ -92,6 +92,12 @@ EVTOPTA86;Colonial Settling Campaign;;;;;;;;;;;;;x
 EVTOPTB86;Anti Emigration Campaign;;;;;;;;;;;;;x
 EVTOPTC86;Tourism and Settlement Campaign;;;;;;;;;;;;;x
 EVTOPTD86;Open Direction Immigration Menu;;;;;;;;;;;;;x
+EVTNAME87;Multiplayer Menu;;;;;;;;;;;;;x
+EVTDESC87;§BAsk for Grants§!: Asks all other players for a Money Grant, they can choose to refuse it.\n\n§BAllow players to send me Grants§!: Players will be able to send grants to you.\n\n§BAllow players to ask me for Grants§!: Allows other players to ask you for grants, you can turn this off if they are spamming you.;;;;;;;;;;;;;x
+EVTOPTA87;Ask for Grants;;;;;;;;;;;;;x
+EVTOPTB87;Allow players to send me Grants;;;;;;;;;;;;;x
+EVTOPTC87;Allow players to ask me Grants;;;;;;;;;;;;;x
+EVTOPTD87;;;;;;;;;;;;;;x
 EVTNAME79X; ;;;;;;;;;;;;;x
 EVTDESC79X; ;;;;;;;;;;;;;x
 EVTOPTA79X; ;;;;;;;;;;;;;x
