--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -49,8 +49,8 @@ option_enable_lucky_nations_desc;Sometimes in this world, nations seem to be ble
 option_enable_lucky_nations_title;Option: Enable Lucky Nations;;;;;;;;;;;;;x
 option_enable_money_hoarder_desc;Money hoarder modifiers will trigger when a country has too much money in its stockpile and reduce its tax efficiency, forcing money back into the economy.;;;;;;;;;;;;;x
 option_enable_money_hoarder_title;Option: Enable Money Hoarder Modifiers;;;;;;;;;;;;;x
-option_enable_options_desc;Open the Setup Menu, allowing you to cusstomize and configure the game as you wish. You will only be able to do so in the first year.;;;;;;;;;;;;;x
-option_enable_options_title;Open TGC's Setup;;;;;;;;;;;;;x
+setup_menu_desc;Open the Setup Menu, allowing you to cusstomize and configure the game as you wish. You will only be able to do so in the first year.;;;;;;;;;;;;;x
+setup_menu_title;Open TGC's Setup;;;;;;;;;;;;;x
 option_enable_overrides_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. Beware: Money is deducted on monthly basis from your treasury. Pay attention to it lest you go bankrupt.;;;;;;;;;;;;;x
 option_enable_overrides_title;Option: Enable Override Decisions;;;;;;;;;;;;;x
 option_enable_spectator_mode_desc;Disable ‘Winds of Westernization’ events for spectator games as an uncivilized nation.;;;;;;;;;;;;;x
@@ -105,8 +105,8 @@ setup_renounce_host_desc;You are currently the Host. If you renounce this role a
 setup_renounce_host_title;Renounce the role of Host;;;;;;;;;;;;;x
 utility_disable_utility_desc;This will hide the utility decisions.;;;;;;;;;;;;;x
 utility_disable_utility_title;Hide 'Utility' Decisions;;;;;;;;;;;;;x
-utility_enable_utility_desc; The decision shows a menu with a plethora of tools to facilitate small changes and fixes during gameplay.;;;;;;;;;;;;;x
-utility_enable_utility_title;Show 'Utility' Decisions;;;;;;;;;;;;;x
+utility_menu_desc;The decision shows a menu with a plethora of tools to facilitate small changes and fixes during gameplay.;;;;;;;;;;;;;x
+utility_menu_title;Open the Utility Menu;;;;;;;;;;;;;x
 utility_popreduction_decisions_disable_desc;The 'Global Pop Reduction' decisions will disappear from this game session and won’t reappear again. You won’t be able to use these decisions again for this game.;;;;;;;;;;;;;x
 utility_popreduction_decisions_disable_title;Disable 'Global Pop Reduction' decisions;;;;;;;;;;;;;x
 utility_popreduction_decisions_hide_desc;Your decision list will now be uncluttered.;;;;;;;;;;;;;x
@@ -133,8 +133,8 @@ utility_will_not_give_desc;This will prevent us from getting events when other p
 utility_will_not_give_title;Disable Giving Grants;;;;;;;;;;;;;x
 utility_will_not_receive_desc;This will mean we no longer will receive grants from other players.;;;;;;;;;;;;;x
 utility_will_not_receive_title;No More Grants!;;;;;;;;;;;;;x
-utility_will_receive_title;Grant Menu;;;;;;;;;;;;;x
-utility_will_receive_desc;Opens the Grant System Menu to ask other players for Money.;;;;;;;;;;;;;x
+grant_menu_title;Grant Menu;;;;;;;;;;;;;x
+grant_menu_desc;Opens the Grant System Menu to ask other players for Money.;;;;;;;;;;;;;x
 override_research_campaign_title;Start a Research Campaign;;;;;;;;;;;;;x
 override_research_campaign_desc;We can redirect some of our annual budget to help along our scientists research for our country.;;;;;;;;;;;;;x
 override_research_campaign_remove_title;Stop the Research campaign;;;;;;;;;;;;;x
