--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -194,6 +194,7 @@ AGRESSION_WAR_UNIFICATION_NAME_AUS_DEN;The 2nd Schleswig War;;;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME_SAR_AUS;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME_SAR_KUK;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 AGRESSION_WAR_WEBSTER_ASHBURTON;The Aroostook War;;;;;;;;;;;;;x
+AGRESSION_ACW_INTERVENTION;$ORDER$ $FIRST$ Liberation of $STATE$;;;;;;;;;;;;;x
 GREAT_WAR_NAME;The $ORDER$Great War;La $ORDER$ Grande Guerre;Der $ORDER$Groﬂer Krieg;;;;;;;;;;;x
 NORMAL_ACW_INTERVENTION;$FIRST$ Intervention in the American Civil War;;;;;;;;;;;;;x
 NORMAL_CALL_ALLIES_WAR_NAME;$ORDER$$FIRST$ Call to Arms;;;;;;;;;;;;;
