--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -57,9 +57,9 @@ EVTNEXT;Next.;;;;;;;;;;;;;x
 EVTCLOSE;Close.;;;;;;;;;;;;;x
 EVTSTART;Back to the Start.;;;;;;;;;;;;;x
 EVTNAME78;Utility Options, 1/3;;;;;;;;;;;;;x
-EVTDESC78;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BMP Access:§! Give players access to grants and other MP functionalities.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
+EVTDESC78;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BNational Focus Changes:§! Access the National Value Change menu.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
 EVTOPTA78;Open National Campaigns menu;;;;;;;;;;;;;x
-EVTOPTB78;Give access to MP functionality to players (New decisions will appear in a day);;;;;;;;;;;;;x
+EVTOPTB78;National Focus Change menu;;;;;;;;;;;;;x
 EVTOPTC78;Open Vassal Release menu;;;;;;;;;;;;;x
 EVTOPTD78;Open Core Return menu;;;;;;;;;;;;;x
 EVTNAME79;Utility Options, 2/3;;;;;;;;;;;;;x
@@ -74,7 +74,14 @@ EVTOPTA80;Open the borders.;;;;;;;;;;;;;x
 EVTOPTB80;Controlled immigration.;;;;;;;;;;;;;x
 EVTOPTC80;Close the borders!;;;;;;;;;;;;;x
 EVTOPTD80;Back to the options;;;;;;;;;;;;;
-EVTOPTE80;Close;;;;;;;;;;;;;xx
+EVTOPTE80;Close;;;;;;;;;;;;;
+EVTNAME81;National Focus Change;;;;;;;;;;;;;x
+EVTDESC81;Pick one of the following National Focus:;;;;;;;;;;;;;x
+EVTOPTA81;Pick Order;;;;;;;;;;;;;x
+EVTOPTB81;Pick Productivity;;;;;;;;;;;;;x
+EVTOPTC81;Pick Autocracy;;;;;;;;;;;;;x
+EVTOPTD81;Pick Equality;;;;;;;;;;;;;
+EVTOPTE81;Pick Liberty;;;;;;;;;;;;;
 EVTNAME84;Utility Options, 3/3;;;;;;;;;;;;;x
 EVTDESC84;\n§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
 EVTOPTA84;Border Control options;;;;;;;;;;;;;x
