--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -1046,6 +1046,8 @@ embrace_albanians_YUG_desc;The Albanians are not truly a Slavic culture, and not
 embrace_albanians_YUG_title;Embrace Albanians;;;;;;;;;;;;;x
 embrace_bosnians_YUG_desc;The Bosniaks are historically a Muslim culture, and notoriously at odds with the rest of the Slavs. With enough effort, however, it should not be impossible to integrate them more fully into the Yugoslav culture and government. Perhaps this might even mean a future of peace between our peoples.;;;;;;;;;;;;;x
 embrace_bosnians_YUG_title;Embrace the Bosniaks;;;;;;;;;;;;;x
+embrace_pomaks_YUG_desc;The Pomaks are a Muslim culture, and notoriously at odds with the rest of the Slavs, but they still have some Orthodox roots. With enough effort it is possible to integrate them into the Yugoslav culture and government. Perhaps this might even mean a future of peace between our peoples.;;;;;;;;;;;;;x
+embrace_pomaks_YUG_title;Embrace the Pomaks;;;;;;;;;;;;;x
 embrace_bulgarians_YUG_desc;The Bulgarians often do not consider themselves true Slavs, or perhaps they simply think themselves superior? Either way relations with the Bulgarians have been difficult. With enough effort, however, it should not be impossible to integrate them more fully into the Yugoslav culture and government. Perhaps this might even mean a future of peace between our peoples.;;;;;;;;;;;;;x
 embrace_bulgarians_YUG_title;Embrace Bulgarians;;;;;;;;;;;;;x
 embrace_greeks_YUG_desc;The Greeks are not truly a Slavic culture, and notoriously at odds with the rest of the Slavs. With enough effort, however, it should not be impossible to integrate them more fully into the Yugoslav culture and government. Perhaps this might even mean a future of peace between our peoples.;;;;;;;;;;;;;x
