--- a/TGCFantasyFormables/localisation/decisions.csv
+++ b/TGCFantasyFormables/localisation/decisions.csv
@@ -3,5 +3,5 @@ invest_in_alaska_title;Invest in Alaska;;;;;;;;;;;;x
 invest_in_alaska_desc;We acquired Alaska. We have to find some use for that land somehow, maybe we could start our very own Colonial Empire, like the big boys.\n\nThe first thing we need would be to build some infrastructure, and give incentives to people to move there.;;;;;;;;;;;;x
 invest_in_alaska_2_title;Increase Alaskan Investments;;;;;;;;;;;;x
 invest_in_alaska_2_desc;Our last round of investments in Alaska were quite successful. No wonder why everyone else is colonizing!\n\nWe can continue to build our "colonial empire" by dumping more money into it.;;;;;;;;;;;;x
-move_to_alaska_title;Move to Alaska!;;;;;;;;;;;;x
-move_to_alaska_desc;Alaska became the center point of our nation, at this point, it's only natural for us to move the capital and governamental infrastructure there.;;;;;;;;;;;;x
+move_to_alaska_title;Relocate the royal family to Alaska!;;;;;;;;;;;;x
+move_to_alaska_desc;The Princes of Liechtenstein rarely step foot into the country named after them. Governing from their estate in Prague, the principality of Liechtenstein is of minior importance to them. However, with the recent purchase of Alaska by The House of Liechtenstein, it's about time they take their principality seriously. The royal family has drafted plans for the construction of a new palace in Alaska, serving as the head of our administration and as their primary residence.;;;;;;;;;;;;x
