Option to disable micro states added

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -60,11 +60,11 @@ brz_guyanas_buy;You will pay §Y50000§! pounds per province, up to §Y450000§! pou
 kpb_formation;Forming the United Kingdom will lock you out from Brazilian and Portuguese exclusive content.§b;;;;;;;;;;;;x
 french_schooling_tool_tip;The §GJules Ferry Laws§! and the §GFrench Language Schooling§! decisions are mutually exclusive.§b;;;;;;;;;;;;x
 brazil_colony;Turns Brazil back into a §YColony§!.\n;;;;;;;;;;;;x
-currently_enabled;This is currently §GEnabled§!. Click to §RDisable§! it.;;;;;;;;;;;;x
-currently_disabled;This is currently §RDisabled§!. Click to §GEnable§! it.;;;;;;;;;;;;x
-permanent_option;§!This is permanent, you §RWON'T§! be able to change this optionb again in this save.;;;;;;;;;;;;x
-permanent_option_taken;§! You can't change this option anymore.;;;;;;;;;;;;x
-permanent_action;Beware! This is §RPERMANENT§!!;;;;;;;;;;;;x
-not_mp;§!\nThis is §RNOT§! a multiplayer game, there's nobody to give you grants!;;;;;;;;;;;;x
-cant_do_while_at_war_or_no_vassals;You can't do this while at §Rwar§! or if you §Rhave no vassals§!.;;;;;;;;;;;;x
-cant_do_that_yet;You §RCAN NOT§! do again that yet!;;;;;;;;;;;;x
+currently_enabled;§!This is currently §GEnabled§!. Click to §RDisable§! it.§b;;;;;;;;;;;;x
+currently_disabled;§!This is currently §RDisabled§!. Click to §GEnable§! it.§b;;;;;;;;;;;;x
+permanent_option;§!This is permanent, you §RWON'T§! be able to change this option back on again in this save.§b;;;;;;;;;;;;x
+permanent_option_taken;§! You can't change this option anymore.§b;;;;;;;;;;;;x
+permanent_action;§!Beware! This is §RPERMANENT§!!§b;;;;;;;;;;;;x
+not_mp;§!\nThis is §RNOT§! a multiplayer game, there's nobody to give you grants!§b;;;;;;;;;;;;x
+cant_do_while_at_war_or_no_vassals;§!You can't do this while at §Rwar§! or if you §Rhave no vassals§!.§b;;;;;;;;;;;;x
+cant_do_that_yet;§!You §RCAN NOT§! do again that yet!§b;;;;;;;;;;;;x
