--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -49,7 +49,7 @@ option_enable_lucky_nations_desc;Sometimes in this world, nations seem to be ble
 option_enable_lucky_nations_title;Option: Enable Lucky Nations;;;;;;;;;;;;;x
 option_enable_money_hoarder_desc;Money hoarder modifiers will trigger when a country has too much money in its stockpile and reduce its tax efficiency, forcing money back into the economy.;;;;;;;;;;;;;x
 option_enable_money_hoarder_title;Option: Enable Money Hoarder Modifiers;;;;;;;;;;;;;x
-setup_menu_desc;Open the Setup Menu, allowing you to cusstomize and configure the game as you wish. You will only be able to do so in the first year.;;;;;;;;;;;;;x
+setup_menu_desc;Open the Setup Menu, allowing you to customize and configure the game as you wish. You will only be able to do so in the first year.;;;;;;;;;;;;;x
 setup_menu_title;Open TGC's Setup;;;;;;;;;;;;;x
 option_enable_overrides_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. Beware: Money is deducted on monthly basis from your treasury. Pay attention to it lest you go bankrupt.;;;;;;;;;;;;;x
 option_enable_overrides_title;Option: Enable Override Decisions;;;;;;;;;;;;;x
