Lie changes its name when it moves to alaska

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1464,10 +1464,12 @@ LIB_colonial_company;American Colonization Society;;;;;;;;;;;;;x
 LIE_absolute_monarchy;Principality of Liechtenstein;;;;;;;;;;;;;x
 LIE_colonial_company;Kreis Liechtenstein;;;;;;;;;;;;;x
 LIE_democracy;Republic of Liechtenstein;;;;;;;;;;;;;x
+LIE_democracy2;Republic of Liechtenstein-Alaska;;;;;;;;;;;;;x
 LIE_dominion;Kreis Liechtenstein;;;;;;;;;;;;;x
 LIE_fascist_dictatorship;Liechtensteiner Reich;;;;;;;;;;;;;x
 LIE_federal_democracy;Republic of Liechtenstein;;;;;;;;;;;;;x
 LIE_hms_government;Principality of Liechtenstein;;;;;;;;;;;;;x
+LIE_monarchy2;Kingdom of Liechtenstein-Alaska;;;;;;;;;;;;;x
 LIE_parliamentary_republic;Republic of Liechtenstein;;;;;;;;;;;;;x
 LIE_proletarian_dictatorship;Popular Liechtenstein Republic;;;;;;;;;;;;;x
 LIE_prussian_constitutionalism;Principality of Liechtenstein;;;;;;;;;;;;;x
