--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1469,7 +1469,7 @@ LIE_dominion;Kreis Liechtenstein;;;;;;;;;;;;;x
 LIE_fascist_dictatorship;Liechtensteiner Reich;;;;;;;;;;;;;x
 LIE_federal_democracy;Republic of Liechtenstein;;;;;;;;;;;;;x
 LIE_hms_government;Principality of Liechtenstein;;;;;;;;;;;;;x
-LIE_monarchy2;Kingdom of Liechtenstein-Alaska;;;;;;;;;;;;;x
+LIE_absolute_monarchy2;Kingdom of Liechtenstein-Alaska;;;;;;;;;;;;;x
 LIE_parliamentary_republic;Republic of Liechtenstein;;;;;;;;;;;;;x
 LIE_proletarian_dictatorship;Popular Liechtenstein Republic;;;;;;;;;;;;;x
 LIE_prussian_constitutionalism;Principality of Liechtenstein;;;;;;;;;;;;;x
@@ -1866,9 +1866,9 @@ RGS_democracy2;Rio-Grandense Republic;x;
 RJL_democracy;Juliana Republic;;;;;;;;;;;;;x
 GPR_democracy2;Cabanos;;;;;;;;;;;;;x
 GPR_democracy;Amazonas;;;;;;;;;;;;;x
-GPR_monarchy;Kingdom of Amazonas;;;;;;;;;;;;;x
-GPR_monarchy2;Grão Para;;;;;;;;;;;;;x
-RJL_monarchy;Juliana Kingdom;;;;;;;;;;;;;x
+GPR_hms_government;Kingdom of Amazonas;;;;;;;;;;;;;x
+GPR_hms_government2;Grão Para;;;;;;;;;;;;;x
+RJL_hms_government;Juliana Kingdom;;;;;;;;;;;;;x
 RIO_democracy2;Guanabara Republic;;;;;;;;;;;;;x
 RHO_absolute_monarchy;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RHO_colonial_company;Rhodesia;;;;;;;;;;;;;x
