--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -36,7 +36,7 @@ chivalrous;Chivalrous §G+2 Attack;Courtois;Ritterlich;;;;;;;;;;;x
 choleric;Choleric §W+1 Attack;Colérique;Cholerisch;;;;;;;;;;;x
 clever;Clever;Adroit;Clever;;;;;;;;;;;x
 clueless;Clueless §R-1 Defence;Ignorant;Ahnungslos;;;;;;;;;;;x
-colonial_b;Colonial §R-2 Defence;Colonial;Kolonial;;;;;;;;;;;x
+colonial_trait;Colonial §R-2 Defence;Colonial;Kolonial;;;;;;;;;;;x
 competent;Competent;Compétent;Kompetent;;;;;;;;;;;x
 confident;Confident;Confiant;Sicher;;;;;;;;;;;x
 coolminded;Cool-minded §G+2 Defence;Serein;Bedachtsam;;;;;;;;;;;x
