--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -613,6 +613,8 @@ in_bankrupcy;In bankruptcy;;;;;;;;;;;;;x
 in_bankrupcy_desc;We are bankrupt!;;;;;;;;;;;;;x
 in_disrepair;Disrepair;;;;;;;;;;;;;
 in_disrepair_desc;Buildings in this province were neglected for so long they are falling apart.;;;;;;;;;;;;;
+new_colonies;New Colonies!;;;;;;;;;;;;;
+new_colonies_desc;People are eager to move to the new colonies!;;;;;;;;;;;;;
 inca_excavations;The Gold of the Inca;;;;;;;;;;;;;x
 inca_excavations_interrupted;Contact to expedition lost;;;;;;;;;;;;;x
 inca_excavations_interrupted_desc;The communication between our expedition in Peru and our archaeological society is interrupted. Until the war goes on, our enemies will try to disturb every information exchange.;;;;;;;;;;;;;x
