--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1469,7 +1469,9 @@ LIE_dominion;Kreis Liechtenstein;;;;;;;;;;;;;x
 LIE_fascist_dictatorship;Liechtensteiner Reich;;;;;;;;;;;;;x
 LIE_federal_democracy;Republic of Liechtenstein;;;;;;;;;;;;;x
 LIE_hms_government;Principality of Liechtenstein;;;;;;;;;;;;;x
+LIE_hms_government2;Kingdom of Liechtenstein-Alaska;;;;;;;;;;;;;x
 LIE_absolute_monarchy2;Kingdom of Liechtenstein-Alaska;;;;;;;;;;;;;x
+LIE_prussian_constitutionalism2;Kingdom of Liechtenstein-Alaska;;;;;;;;;;;;;x
 LIE_parliamentary_republic;Republic of Liechtenstein;;;;;;;;;;;;;x
 LIE_proletarian_dictatorship;Popular Liechtenstein Republic;;;;;;;;;;;;;x
 LIE_prussian_constitutionalism;Principality of Liechtenstein;;;;;;;;;;;;;x
