--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -194,6 +194,8 @@ building_suez_canal;Building the Suez Canal;;;;;;;;;;;;;x
 building_suez_canal_desc;The Suez Canal is currently under construction. After each completed phase an event will fire to keep you informed of the progress. Construction will take approximately 10 years.;;;;;;;;;;;;;x
 building_suez_canal_revolt;Worker revolt at the Suez Canal;;;;;;;;;;;;;x
 building_suez_canal_revolt_desc;Construction off the Suez Canal has halted until the revolt is over.;;;;;;;;;;;;;x
+building_chunnel;Building the Channel Tunnel;;;;;;;;;;;;;x
+building_chunnel_desc;The Channel Tunnel is currently under construction. After each completed phase an event will fire to keep you informed of the progress. Construction will take approximately 10 years.;;;;;;;;;;;;;x
 bureaucratsresist2;Bureaucratic Disorder!;;;;;;;;;;;;;x
 bureaucratsresist2_desc;The bureaucracy is in revolutionary shambles!;;;;;;;;;;;;;x
 bureaucratsresist;Counter-Revolution: Bureaucrats!;;;;;;;;;;;;;x
