--- a/TGC_MORE/localisation/00_TGCMOREEvents130000.csv
+++ b/TGC_MORE/localisation/00_TGCMOREEvents130000.csv
@@ -1,4 +1,4 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
-EVTNAME130000;Temperature is Finally Controled!;;;;;;;;;;;;;x
-EVTDESC130000;‘Mother, mother! Old man Johnson has installed a new system! It can heat, and cool the room! He says it’s called a ‘air conditioning’!’\n \n The advent of the air conditioning in $PROVINCENAME$ has led to a revolution in the local standard of living! Truly, the boons of industry are good unto $COUNTRY$. ;;;;;;;;;;;;;x
-EVTOPTA130000;Truly, ‘tis.;C'est certain.;Aber echt!;;;;;;;;;;;x
+EVTNAME133300;Temperature is Finally Controled!;;;;;;;;;;;;;x
+EVTDESC133300;Mother, mother! Old man Johnson has installed a new system! It can heat, and cool the room! He says it’s called a ‘air conditioning’!’\n \n The advent of the air conditioning in $PROVINCENAME$ has led to a revolution in the local standard of living! Truly, the boons of industry are good unto $COUNTRY$ .;;;;;;;;;;;;;x
+EVTOPTA133300;Truly, ‘tis.;C'est certain.;Aber echt!;;;;;;;;;;;x
