Spanish American Wars - Events
Still no localization, but the events should fire

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1282,3 +1282,6 @@ EVTOPTA8480;May the city forever flourish.;;;;;;;;;;;;;x
 EVTDESC8022;The president of Brazil has made an official visit to Buenos Aires, with three days of celebration to promote Brazilian-Argentine friendship. The Chilean press, however, suspects that there is a secret alliance between Argentina and Brazil in the works.;;;;;;;;;;;;;x
 EVTNAME8022;President Campos Sales visits Argentina;;;;;;;;;;;;;x
 EVTOPTA8022;Splendid!;;;;;;;;;;;;;x
+EVTNAME9000;War of Independence;;;;;;;;;;;;;x
+EVTDESC9000;Our nation, albeit of low population, has a substantial local advantage over the Spanish. The drive for independence has allowed us to mobilize far more than we would be able to muster for other conflicts.;;;;;;;;;;;;;
+EVTOPTA9000;We will endure!;;;;;;;;;;;;;
