Andean Conf base

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -31,6 +31,7 @@ ALD_ADJ;Algerian;Algérien;Algerisch;;;;;;;;;;;x
 ALS_ADJ;Alsatian;;;;;;;;;;;;;x
 ALT_ADJ;Altaic;;;;;;;;;;;;;x
 ANB_ADJ;Anhaltian;Anhaltien;Anhaltisch;;;;;;;;;;;x
+ANC_ADJ;Andean;;;;;;;;;;;;;x
 ANG_ADJ;Angolan;;;;;;;;;;;;;x
 ANH_ADJ;Anhaltian;Anhaltien;Anhaltisch;;;;;;;;;;;x
 ANK_ADJ;Anhaltian;Anhaltien;Anhaltisch;;;;;;;;;;;x
