--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -2408,3 +2408,7 @@ ZAC_democracy;Republic of Zacatecas;;;;;;;;;;;;;x
 ZAC_federal_democracy;Republic of Zacatecas;;;;;;;;;;;;;x
 ZAM_colonial_company;Northern Rhodesia;;;;;;;;;;;;;x
 ZAM_dominion;Northern Rhodesia;;;;;;;;;;;;;x
+ANC_democracy;Andean Republic;;;;;;;;;;;;;x
+ANC_democracy2;Andean Republic;;;;;;;;;;;;;x
+ANC_absolute_monarchy;Andean Empire;;;;;;;;;;;;;x
+ANC_absolute_monarchy2;Andean Empire;;;;;;;;;;;;;x
