--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -25,6 +25,7 @@ ALD;Algeria;Algérie;Algerien;;;;;;;;;;;x
 ALS;Alsace;;;;;;;;;;;;;x
 ALT;Altai Republic;;;;;;;;;;;;;x
 ANB;Anhalt-Bernburg;;;;;;;;;;;;;x
+ANC;Andean Confederation;;;;;;;;;;;;;x
 ANG;Angola;;;;;;;;;;;;;x
 ANH;Anhalt-Dessau;;;;;;;;;;;;;x
 ANK;Anhalt-Köthen;;;;;;;;;;;;;x
