Setup e utility menu code rework

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -68,3 +68,4 @@ permanent_action;§!Beware! This is §RPERMANENT§!!§b;;;;;;;;;;;;x
 not_mp;§!\nThis is §RNOT§! a multiplayer game, there's nobody to give you grants!§b;;;;;;;;;;;;x
 cant_do_while_at_war_or_no_vassals;§!You can't do this while at §Rwar§! or if you §Rhave no vassals§!.§b;;;;;;;;;;;;x
 cant_do_that_yet;§!You §RCAN NOT§! do again that yet!§b;;;;;;;;;;;;x
+locked_option;§!This option is §RLocked.§! for safety, unlock it before using.§b;;;;;;;;;;;;x
