--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -29,85 +29,88 @@ EVTOPTB59;Extra Random mode.;;;;;;;;;;;;;x
 EVTOPTC59;See All Options;;;;;;;;;;;;;x
 EVTOPTD59;I'm done with the setup.;;;;;;;;;;;;;x
 EVTNAME60;Setup Options, 1/4;;;;;;;;;;;;;x
-EVTDESC60;§BColonial Railroading§!: Within TGC there is plenty of flavor to help both the AI and the player follow a historical colonisation path in Africa and Asia. You may prefer to play without these leading to more unpredictable colonisation.\n§BEarly Crisis§!: In TGC, crisis only start after 1870, when Revolution and Counter-revolution is researched. Enabling Early Crisis will allow then to happen at any point. \n§BUK's Splendid Isolation§!: Historically the UK did not ally major european powers, and so in TGC the UK is forced to break alliances with any Great Powers who aren't Portugal, Belgium, Japan or the Ottomans. You may wish to turn this off. \n§BUSA African Colonization§!: USA has reduced influence in Africa, as historically the USA was not interested in Africa beyond Liberia. You may wish to remove this constraint. This will not affect an USA player.;;;;;;;;;;;;;x
+EVTDESC60;§BColonial Railroading§!: Within TGC there is plenty of flavor to help both the AI and the player follow a historical colonisation path in Africa and Asia. You may prefer to play without these leading to more unpredictable colonisation.\n§BEarly Crisis§!: In TGC, crisis only start after 1862, when Revolution and Counter-revolution is researched. Enabling Early Crisis will allow then to happen at any point. \n§BUK's Splendid Isolation§!: Historically the UK did not ally major european powers, and so in TGC the UK is forced to break alliances with any Great Powers who aren't Portugal, Belgium, Japan or the Ottomans. You may wish to turn this off. \n§BUSA African Colonization§!: USA has reduced influence in Africa, as historically the USA was not interested in Africa beyond Liberia. You may wish to remove this constraint. This will not affect an USA player.;;;;;;;;;;;;;x
 EVTOPTA60;Colonial Railroading (Default: §GEnabled§!);;;;;;;;;;;;;x
 EVTOPTB60;Early Crisis (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTC60;UK's Splendid Isolation (Default: §GEnabled§!);;;;;;;;;;;;;x
 EVTOPTD60;USA's African Colonization (Default: §RDisabled§!);;;;;;;;;;;;;x
-EVTNAME65;Setup Options, 2/4;;;;;;;;;;;;;x
-EVTDESC65;§BExtra Flavor§!: TGC has integrated some ahistorical and wacky submods allowing players (not the AI) to take their nation down implausible alternative paths. You may prefer to play without these.\n§BDisable Microstates§!: TGC has plenty of somewhat isolated microstates, like the classic San Marino. You may wish to disable those, which makes them be annexed by bigger countries.\n§BEarly Colonial Conquest§!: This will enable you (and the AI) to justify protectorates/concessions on any province anywhere except China. By default, you can justify these CBs on bordering or port countries, while inland gets unlocked by Scramble.\n§BMinor Great Power Diplomancy Ban§!: Bans the 7th and 8th Great-Power from influencing nations through diplomacy (although not through the use of CB's and other ways of earning influence). For people that like a game with less nations meddling with global affairs.;;;;;;;;;;;;;x
-EVTOPTA65;Extra Flavor (Default: §GEnabled§!);;;;;;;;;;;;;x
-EVTOPTB65;Disable Microstates (Default: §GEnabled§!);;;;;;;;;;;;;x
-EVTOPTC65;Early Colonial Conquest (Default: §RDisabled§!);;;;;;;;;;;;;x
-EVTOPTD65;Minor Great Power Diplomancy Ban (Default: §RDisabled§!);;;;;;;;;;;;;x
-EVTNAME70;Setup Options, 3/4;;;;;;;;;;;;;x
-EVTDESC70;§BWork Place Events§!: A few province events related to the workplace, such as 'The Old Man and the Sea', 'All the Tea in PROVINCENAME' and 'Blood and Iron Mine' can get quite spammy. You may prefer to disable those.\n§BLeader System§!: There is a National Leader system which will randomly assigned prime ministers/presidents to your country, you may wish to disable this.\n§BUnite as Puppet options§!: This allows a Great Power to unite some of their spherelings into a culture union puppet (Italy, Iberia, Scandinavia, Yugoslavia, Romania, Arabia, Transcaucasia, Turkestan and the United Baltic Duchy), some players consider these to be OP and prefer to play without them.\n§BMobilization Limiter for the AI§!: Sets some limits on when the AI can mobilize, so it doesn't ruin it's economy mobilizing in every single small war.;;;;;;;;;;;;;x
-EVTOPTA70;Work Place Events (Default: §GEnabled§!);;;;;;;;;;;;;x
-EVTOPTB70;Leader System (Default: §GEnabled§!);;;;;;;;;;;;;x
-EVTOPTC70;Unite as Puppet options(Default: §GEnabled§!);;;;;;;;;;;;;x
-EVTOPTD70;Mobilization Limiter for the AI (Default: §RDisabled§!);;;;;;;;;;;;;x
-EVTNAME75;Setup Options, 4/4;;;;;;;;;;;;;x
-EVTDESC75;§BBypass American Civil War Requirements§!:This will bypass the American Civil War requirements and make sure it triggers most of the times.\n§BBreak Brazil§!: This will break Brazil apart and divide it into it's states, if you're playing as Brazil you will be able to pick a state to play after the breakage is over.\n§BAustria and the Crimea War§! This is for players who want to see an almost certain mini-ww1 in 1853. By default, the chance Austria intervenes is 15%. This will make Austria almost certain to join the Crimean War, Prussia will react to either side Austria chooses.\n§BLucky Nations§!: Bless 10 non great powers with extra luck so they are more likely to go well, this will help the game be less predictable.;;;;;;;;;;;;;x
-EVTOPTA75;Bypass American Civil War Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
-EVTOPTB75;Break Brazil;;;;;;;;;;;;;x
-EVTOPTC75;Make Austria Certain to join Crimean War(Default: §RDisabled§!);;;;;;;;;;;;;x
-EVTOPTD75;Lucky Nations (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTNAME61;Setup Options, 2/4;;;;;;;;;;;;;x
+EVTDESC61;§BExtra Flavor§!: TGC has integrated some ahistorical and wacky submods allowing players (not the AI) to take their nation down implausible alternative paths. You may prefer to play without these.\n§BMicrostates§!: TGC has plenty of somewhat isolated microstates, like the classic San Marino. You may wish to disable those, which makes them be annexed by bigger countries.\n§BEarly Colonial Conquest§!: This will enable you (and the AI) to justify protectorates/concessions on any province anywhere except China. By default, you can justify these CBs on bordering or port countries, while inland gets unlocked by Scramble.\n§BMinor Great Power Diplomancy Ban§!: Bans the 7th and 8th Great-Power from influencing nations through diplomacy (although not through the use of CB's and other ways of earning influence). For people that like a game with less nations meddling with global affairs.;;;;;;;;;;;;;x
+EVTOPTA61;Extra Flavor (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTB61;Microstates (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTC61;Early Colonial Conquest (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTOPTD61;Minor Great Power Diplomancy Ban (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTNAME62;Setup Options, 3/4;;;;;;;;;;;;;x
+EVTDESC62;§BWork Place Events§!: A few province events related to the workplace, such as 'The Old Man and the Sea', 'All the Tea in PROVINCENAME' and 'Blood and Iron Mine' can get quite spammy. You may prefer to disable those.\n§BLeader System§!: There is a National Leader system which will randomly assigned prime ministers/presidents to your country, you may wish to disable this.\n§BUnite as Puppet options§!: This allows a Great Power to unite some of their spherelings into a culture union puppet (Italy, Iberia, Scandinavia, Yugoslavia, Romania, Arabia, Transcaucasia, Turkestan and the United Baltic Duchy), some players consider these to be OP and prefer to play without them.\n§BMobilization Limiter for the AI§!: Sets some limits on when the AI can mobilize, so it doesn't ruin it's economy mobilizing in every single small war.;;;;;;;;;;;;;x
+EVTOPTA62;Work Place Events (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTB62;Leader System (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTC62;Unite as Puppet options(Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTD62;Mobilization Limiter for the AI (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTNAME63;Setup Options, 4/4;;;;;;;;;;;;;x
+EVTDESC63;§BBypass American Civil War Requirements§!:This will bypass the American Civil War requirements and make sure it triggers most of the times.\n§BBreak Brazil§!: This will break Brazil apart and divide it into it's states, if you're playing as Brazil you will be able to pick a state to play after the breakage is over.\n§BAustria and the Crimea War§! This is for players who want to see an almost certain mini-ww1 in 1853. By default, the chance Austria intervenes is 15%. This will make Austria almost certain to join the Crimean War, Prussia will react to either side Austria chooses.\n§BLucky Nations§!: Bless 10 non great powers with extra luck so they are more likely to go well, this will help the game be less predictable.;;;;;;;;;;;;;x
+EVTOPTA63;Bypass American Civil War Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTOPTB63;Break Brazil;;;;;;;;;;;;;x
+EVTOPTC63;Make Austria Certain to join Crimean War(Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTOPTD63;Lucky Nations (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTBACK;Back to the Start.;;;;;;;;;;;;;x
 EVTNEXT;Next.;;;;;;;;;;;;;x
 EVTCLOSE;Close.;;;;;;;;;;;;;x
 EVTSTART;Back to the Start.;;;;;;;;;;;;;x
-EVTNAME78;Utility Options, 1/3;;;;;;;;;;;;;x
-EVTDESC78;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BNational Focus Changes:§! Access the National Value Change menu.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
-EVTOPTA78;Open National Campaigns menu;;;;;;;;;;;;;x
-EVTOPTB78;National Focus Change menu;;;;;;;;;;;;;x
-EVTOPTC78;Open Vassal Release menu;;;;;;;;;;;;;x
-EVTOPTD78;Open Core Return menu;;;;;;;;;;;;;x
-EVTNAME79;Utility Options, 2/3;;;;;;;;;;;;;x
-EVTDESC79;\n§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n\n§BRequest a General§!: This will give a single free average general. You can have only one cheat general at a time.\n\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
-EVTOPTA79;Reduce Global Population by 10%;;;;;;;;;;;;;x
-EVTOPTB79;Vassal Tax Payment;;;;;;;;;;;;;x
-EVTOPTC79;Request a General;;;;;;;;;;;;;x
-EVTOPTD79;See Tech School Change options (New decisions will appear in a day);;;;;;;;;;;;;x
-EVTNAME80;Border Control options;;;;;;;;;;;;;x
-EVTDESC80;Pick whatever policy you want, but be aware: You will only be able to do that again after the §RLaw Changed by Force§! modifier goes away.;;;;;;;;;;;;;x
-EVTOPTA80;Open the borders.;;;;;;;;;;;;;x
-EVTOPTB80;Controlled immigration.;;;;;;;;;;;;;x
-EVTOPTC80;Close the borders!;;;;;;;;;;;;;x
-EVTOPTD80;Back to the options;;;;;;;;;;;;;
-EVTOPTE80;Close;;;;;;;;;;;;;
-EVTNAME81;National Focus Change;;;;;;;;;;;;;x
-EVTDESC81;Pick one of the following National Focus:;;;;;;;;;;;;;x
-EVTOPTA81;Pick Order;;;;;;;;;;;;;x
-EVTOPTB81;Pick Productivity;;;;;;;;;;;;;x
-EVTOPTC81;Pick Autocracy;;;;;;;;;;;;;x
-EVTOPTD81;Pick Equality;;;;;;;;;;;;;
-EVTOPTE81;Pick Liberty;;;;;;;;;;;;;
-EVTNAME84;Utility Options, 3/3;;;;;;;;;;;;;x
-EVTDESC84;\n§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
-EVTOPTA84;Border Control options;;;;;;;;;;;;;x
-EVTOPTB84;RGO Change Menu (Mining);;;;;;;;;;;;;x
-EVTOPTC84;RGO Change Menu (Farming);;;;;;;;;;;;;x
-EVTNAME85;National Campaign Menu, 1/3;;;;;;;;;;;;;x
-EVTDESC85;§BBirth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BDiplomatic Campaign§!: Initiate a series of Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BAcademic Campaign§!: By making a series of concessions to Universities and other institutions, private or public, we will able to increase our Research Point production.;;;;;;;;;;;;;x
-EVTOPTA85;Remove all currently active National Campaigns;;;;;;;;;;;;;x
-EVTOPTB85;Birth Rate Campaign;;;;;;;;;;;;;x
-EVTOPTC85;Diplomatic Campaign;;;;;;;;;;;;;x
-EVTOPTD85;Academic Campaign;;;;;;;;;;;;;x
-EVTNAME86;National Campaign Menu, 2/3;;;;;;;;;;;;;x
-EVTDESC86;§BColonial Settling Campaign§!: Incentivize our citizens to move and settle in our colonies, increasing colonial immigration.\n\n§BAnti Emigration Campaign§!: By using the power of patriotism and propaganda, we will convince our citizens to stay, instead of simply using the other Utility Decision to close the borders.\n\n§BTourism and Settlement Campaign§!: We can start an International Campaign promoting our country, and by giving incentives to new settlers, we can heavily increase the numbers of Immigrations into our country.\n\n§BDirection Immigration Menu§!: Open The Direction Immigration submod menu. This will only work if said submod is activated.;;;;;;;;;;;;;x
-EVTOPTA86;Colonial Settling Campaign;;;;;;;;;;;;;x
-EVTOPTB86;Anti Emigration Campaign;;;;;;;;;;;;;x
-EVTOPTC86;Tourism and Settlement Campaign;;;;;;;;;;;;;x
-EVTOPTD86;Open Direction Immigration Menu;;;;;;;;;;;;;x
-EVTNAME87;Multiplayer Menu;;;;;;;;;;;;;x
-EVTDESC87;§BAsk for Grants§!: Asks all other players for a Money Grant, they can choose to refuse it.\n\n§BAllow players to send me Grants§!: Players will be able to send grants to you.\n\n§BAllow players to ask me for Grants§!: Allows other players to ask you for grants, you can turn this off if they are spamming you.;;;;;;;;;;;;;x
-EVTOPTA87;Ask for Grants;;;;;;;;;;;;;x
-EVTOPTB87;Allow players to send me Grants;;;;;;;;;;;;;x
-EVTOPTC87;Allow players to ask me Grants;;;;;;;;;;;;;x
-EVTOPTD87;;;;;;;;;;;;;;x
-EVTNAME79X; ;;;;;;;;;;;;;x
-EVTDESC79X; ;;;;;;;;;;;;;x
-EVTOPTA79X; ;;;;;;;;;;;;;x
-EVTOPTB79X; ;;;;;;;;;;;;;x
-EVTOPTC79X; ;;;;;;;;;;;;;x
-EVTOPTD79X; ;;;;;;;;;;;;;x
+EVTNAME64;Utility Options, 1/3;;;;;;;;;;;;;x
+EVTDESC64;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BNational Value Changes:§! Access the National Value Change menu.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
+EVTOPTA64;Open National Campaigns menu;;;;;;;;;;;;;x
+EVTOPTB64;National Focus Change menu;;;;;;;;;;;;;x
+EVTOPTC64;Open Vassal Release menu;;;;;;;;;;;;;x
+EVTOPTD64;Open Core Return menu;;;;;;;;;;;;;x
+EVTNAME65;Utility Options, 2/3;;;;;;;;;;;;;x
+EVTDESC65;\n§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n\n§BRequest a General§!: This will give a single free average general. You can have only one cheat general at a time.\n\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
+EVTOPTA65;Reduce Global Population by 10%;;;;;;;;;;;;;x
+EVTOPTB65;Vassal Tax Payment;;;;;;;;;;;;;x
+EVTOPTC65;Request a General;;;;;;;;;;;;;x
+EVTOPTD65;See Tech School Change options (New decisions will appear in a day);;;;;;;;;;;;;x
+EVTNAME66;Utility Options, 3/3;;;;;;;;;;;;;x
+EVTDESC66;\n§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
+EVTOPTA66;Border Control options;;;;;;;;;;;;;x
+EVTOPTB66;RGO Change Menu (Mining);;;;;;;;;;;;;x
+EVTOPTC66;RGO Change Menu (Farming);;;;;;;;;;;;;x
+EVTNAME67;Border Control options;;;;;;;;;;;;;x
+EVTDESC67;Pick whatever policy you want, but be aware: You will only be able to do that again after the §RLaw Changed by Force§! modifier goes away.;;;;;;;;;;;;;x
+EVTOPTA67;Open the borders.;;;;;;;;;;;;;x
+EVTOPTB67;Controlled immigration.;;;;;;;;;;;;;x
+EVTOPTC67;Close the borders!;;;;;;;;;;;;;x
+EVTOPTD67;Back to the options;;;;;;;;;;;;;
+EVTNAME68;National Focus Change;;;;;;;;;;;;;x
+EVTDESC68;Pick one of the following National Focus:;;;;;;;;;;;;;x
+EVTOPTA68;Pick Order;;;;;;;;;;;;;x
+EVTOPTB68;Pick Productivity;;;;;;;;;;;;;x
+EVTOPTC68;Pick Autocracy;;;;;;;;;;;;;x
+EVTOPTD68;Pick Equality;;;;;;;;;;;;;
+EVTOPTE68;Pick Liberty;;;;;;;;;;;;;
+EVTNAME69;National Campaign Menu, 1/3;;;;;;;;;;;;;x
+EVTDESC69;§BBirth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BDiplomatic Campaign§!: Initiate a series of Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BAcademic Campaign§!: By making a series of concessions to Universities and other institutions, private or public, we will able to increase our Research Point production.;;;;;;;;;;;;;x
+EVTOPTA69;Remove all currently active National Campaigns;;;;;;;;;;;;;x
+EVTOPTB69;Birth Rate Campaign;;;;;;;;;;;;;x
+EVTOPTC69;Diplomatic Campaign;;;;;;;;;;;;;x
+EVTOPTD69;Academic Campaign;;;;;;;;;;;;;x
+EVTNAME70;National Campaign Menu, 2/3;;;;;;;;;;;;;x
+EVTDESC70;§BColonial Settling Campaign§!: Incentivize our citizens to move and settle in our colonies, increasing colonial immigration.\n\n§BAnti Emigration Campaign§!: By using the power of patriotism and propaganda, we will convince our citizens to stay, instead of simply using the other Utility Decision to close the borders.\n\n§BTourism and Settlement Campaign§!: We can start an International Campaign promoting our country, and by giving incentives to new settlers, we can heavily increase the numbers of Immigrations into our country.\n\n§BDirection Immigration Menu§!: Open The Direction Immigration submod menu. This will only work if said submod is activated.;;;;;;;;;;;;;x
+EVTOPTA70;Colonial Settling Campaign;;;;;;;;;;;;;x
+EVTOPTB70;Anti Emigration Campaign;;;;;;;;;;;;;x
+EVTOPTC70;Tourism and Settlement Campaign;;;;;;;;;;;;;x
+EVTOPTD70;Open Direction Immigration Menu;;;;;;;;;;;;;x
+EVTNAME71;Multiplayer Menu;;;;;;;;;;;;;x
+EVTDESC71;§BAsk for Grants§!: Asks all other players for a Money Grant, they can choose to refuse it.\n\n§BAllow players to send me Grants§!: Players will be able to send grants to you.\n\n§BAllow players to ask me for Grants§!: Allows other players to ask you for grants, you can turn this off if they are spamming you.;;;;;;;;;;;;;x
+EVTOPTA71;Ask for Grants;;;;;;;;;;;;;x
+EVTOPTB71;Allow players to send me Grants;;;;;;;;;;;;;x
+EVTOPTC71;Allow players to ask me Grants;;;;;;;;;;;;;x
+EVTNAME72;World Shattering;;;;;;;;;;;;;x
+EVTDESC72;This will §RShatter§! the world, dividing countries into multiple pieces.;;;;;;;;;;;;;x
+EVTOPTA72;Unlock Shattering;;;;;;;;;;;;;x
+EVTOPTB72;Shatter World;;;;;;;;;;;;;x
+EVTOPTC72;Go Back;;;;;;;;;;;;;x
+EVTNAME65X; ;;;;;;;;;;;;;x
+EVTDESC65X; ;;;;;;;;;;;;;x
+EVTOPTA65X; ;;;;;;;;;;;;;x
+EVTOPTB65X; ;;;;;;;;;;;;;x
+EVTOPTC65X; ;;;;;;;;;;;;;x
+EVTOPTD65X; ;;;;;;;;;;;;;x
