Attempt to split Jelgava prov into three

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3501,8 +3501,8 @@ PROV3499;Ushachy;;;;;;;;;;;;;x
 PROV3500;Kithira;;;;;;;;;;;;;x
 PROV3501;Rio San Juan;;;;;;;;;;;;;x
 PROV3502;San Juan del Norte;;;;;;;;;;;;;x
-PROV3503;Balchita;;;;;;;;;;;;;x
-PROV3504;Santa Cruz;;;;;;;;;;;;;x
+PROV3503;Jakobstadt;;;;;;;;;;;;;x
+PROV3504;Dünaburg;;;;;;;;;;;;;x
 PROV3505;Kehek Aike;;;;;;;;;;;;;x
 PROV3506;Tamel Aike;;;;;;;;;;;;;x
 PROV3507;Sierra de Sangra;;;;;;;;;;;;;x
